force-app/main/default/objects/ContainerGoodSO__c/ContainerGoodSO__c.object-meta.xml
<CustomObject>
    <label>Container (Goods S/O)</label>
    <nameField>
        <displayFormat>CTR-{000000}</displayFormat>
        <label>CNTR (Goods S/O) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Container (Goods S/Os)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>