force-app/main/default/objects/ContainerGoodSO__c/fields/CargoQuantity__c.field-meta.xml
<CustomField>
    <fullName>CargoQuantity__c</fullName>
    <label>Cargo Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>