force-app/main/default/objects/ContainerGoodSO__c/fields/ContainerNumber__c.field-meta.xml
<CustomField>
    <fullName>ContainerNumber__c</fullName>
    <label>Container Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>