force-app/main/default/objects/ContainerGoodSO__c/fields/GOODSSO__c.field-meta.xml
<CustomField>
    <fullName>GOODSSO__c</fullName>
    <label>GOODS S/O</label>
    <referenceTo>SALES_ORDER__c</referenceTo>
    <relationshipLabel>Container (Goods S/Os)</relationshipLabel>
    <relationshipName>Container_Goods_S_Os</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>