force-app/main/default/objects/ContainerGoodSO__c/fields/GrossWeightMT__c.field-meta.xml
<CustomField>
    <fullName>GrossWeightMT__c</fullName>
    <label>Gross Weight(MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>