force-app/main/default/objects/ContainerGoodSO__c/fields/MeasurementCBM__c.field-meta.xml
<CustomField>
    <fullName>MeasurementCBM__c</fullName>
    <label>Measurement(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>