force-app/main/default/objects/ContainerGoodSO__c/fields/SealNumber__c.field-meta.xml
<CustomField>
    <fullName>SealNumber__c</fullName>
    <label>Seal Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>