force-app/main/default/objects/ContainerGoodSO__c/fields/TRSBill__c.field-meta.xml
<CustomField>
    <fullName>TRSBill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRS Bill</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TRSBill__c.SalesOrderID__c</field>
            <operation>equals</operation>
            <valueField>$Source.GOODSSO__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TRSBill__c</referenceTo>
    <relationshipLabel>Container (Goods S/Os)</relationshipLabel>
    <relationshipName>TRSBill</relationshipName>
    <type>Lookup</type>
</CustomField>