force-app/main/default/objects/ContainerGoodSO__c/recordTypes/ContainerGoodsSO.recordType-meta.xml
<RecordType>
    <fullName>ContainerGoodsSO</fullName>
    <active>true</active>
    <label>Container (Goods S/O)</label>
</RecordType>