force-app/main/default/objects/ContainerGoodSO__c/validationRules/Duplicated_Seal_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicated_Seal_number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(  duplicateIDSealNo__c ) )</errorConditionFormula>
    <errorMessage>You&apos;ve just input duplicated Container number in same Shipment. Please check again</errorMessage>
</ValidationRule>